# BIT-Compiler-2024

./: compilerlab1.cpp
lab1/test/: out.txt  result.s  src.txt  template.s
lab2/: CMakeLists.txt  lexer.cpp  lexer.flex  lexer.h  main.cpp  parser.cpp
lab2/test/: result.s  test.sh  test_compiler.sh
lab3/: .gitignore  CMakeLists.txt  lexer.flex  lexer.h  parser.cpp  parser.h
lab3/test/: result.s  src.txt  test.sh  test_compiler.sh
lab4/: CMakeLists.txt  lexer.flex  parser.cpp  parser.h
lab4/test/: src.txt  test.sh  test_compiler.sh
test/: test.sh
